# basic_chess_engine

Chess Engine/: CMakeLists.txt
Chess Engine/src/: Board.cpp  Board.h  Engine.cpp  Engine.h  GUI.cpp  GUI.h  main.cpp
